# EchoShoal

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
backend/: .env.example  check_sim.py  evaluation_results.json  pyproject.toml  run_benchmark_all.py  test_market_update.py
backend/app/: config.py  main.py
backend/app/core/: job_manager.py  redis_client.py
backend/app/evaluation/: README.md  __init__.py  anonymizer.py  benchmarks.py  comparator.py  contamination.py  models.py  runner.py
backend/app/oasis/: __init__.py  action_analyzer.py  config.py  graph_sync.py  profile_generator.py  simulation_runner.py
backend/app/prediction/: comparator.py  models.py  trend.py
backend/app/reports/: extractor.py  generator.py  models.py
backend/app/simulation/: agent_generator.py  engine.py  factory.py  models.py  scenario_analyzer.py
backend/scripts/: generate_benchmark_docs.py  run_benchmark_and_contamination.py  run_benchmarks.py  run_full_benchmark.py  run_full_benchmark_suite.py  run_full_evaluation.py  verify_oasis.py
backend/tests/unit/: test_agent_memory.py  test_agent_personality.py  test_api.py  test_contamination.py  test_data_pipeline.py  test_document_parser.py  test_document_processor.py  test_engine.py  test_evaluation.py  test_events.py  test_fetcher.py  test_graph.py  test_graph_rag.py  test_information_asymmetry.py  test_integration.py  test_job_manager.py  test_llm_router.py  test_market_research.py  test_models.py  test_nlp.py  test_oasis.py  test_prediction.py  test_redis_client.py  test_reports.py  test_scenario_analyzer.py
(+137 files in other folders)
